--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,20 @@
-{"autoload-dev": {
+{
+    "name": "pecherin/pc",
+    "autoload": {
+        "psr-4": {
+            "": "src/"
+        }
+    },
+    "authors": [
+        {
+            "name": "Coop Teh",
+            "email": "v.milevskiy@coopteh.ru"
+        }
+    ],
+    "require": {
+        "phpmailer/phpmailer": "^6.9"
+    },
+    "autoload-dev": {
         "psr-4": {
             "Test\\": "tests/"
         }
@@ -6,4 +22,6 @@
     "require-dev": {
         "phpunit/phpunit": "^11.4"
     }
+
 }
+
